--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "bv_mvclist",
   "version": "1.0.0",
-  "description": "",
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,5 +15,6 @@
   "bugs": {
     "url": "https://github.com/pagaryashodhan/bv_mvclist/issues"
   },
-  "homepage": "https://github.com/pagaryashodhan/bv_mvclist#readme"
+  "homepage": "https://github.com/pagaryashodhan/bv_mvclist#readme",
+  "description": ""
 }
